2009-02-18  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Regression fix, debugging features.

	* src/mb/hd-comp-mgr.c:
	  hd_comp_mgr_setup_input_viewport():
	    Only consider subtracting the territory of foreground windows
	    in application and home views.  Doing so in tasw view opens
	    up the possibility of interaction with the thumbnail contents
	    with the pointer, which is fun but incorrect.
	  hd_comp_mgr_dump_debug_info():
	    Dump client window geometries.
	    Dump the input shape.

2009-02-18  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Task navigator cleanups.

	* src/home/hd-render-manager.h
	* src/home/hd-render-manager.c:
	  added hd_render_manager_return_app()
	  added hd_render_manager_return_dialog()
	* src/home/hd-task-navigator.h
	* src/home/hd-task-navigator.c:
	  drop the application window's actor and its dialogs in a container
	  to make it easier to hide them all at once

2009-02-18  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/mb/hd-wm.c: Applied Laszlo Pere's patch for bug #95018 (switch
	  to app mode when application is activated). Also fixes #99100

2009-02-17  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/mb/hd-comp-mgr.c:
	  Now remove any notifications and dialogs that are in front of the
	  desktop from the input mask area for the buttons. NB#101613

2009-02-17  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/mb/hd-comp-mgr.c:
	  Moved initialisation of hd-app-manager to allow it to add a signal
	  to hd-render-manager
	* src/home/hd-render-manager.c:
	  Modified calls to avoid clutter warnings when actors had/didn't have
	  parents

2009-02-17  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-render-manager.h (STATE_DISCARD_PREVIEW_NOTE):
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_register_client,
	  hd_comp_mgr_map_notify): Discard previews if there is an fullscreen
	  application is shown. Fixes: NB#97230
	
	* debian/changelog: Update.
